Create a HTML page that displays a header and a footer and uses inline styling

--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,4 +1,7 @@
-<!-- Auth: codenvivbes -->
+<!--
+    Auth: codenvivbes
+    HTML page that displays a header and a footer and uses inline styling.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
