Create a HTML page that displays a header and a footer and uses internal CSS

--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,4 +1,7 @@
-<!-- Auth: codenvibes -->
+<!--
+    Auth: codenvibes
+    HTML page that displays a header and a footer and uses internal CSS.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
